Bug 64872 - FILESAVE: infinite loop saving as doc
Summary: FILESAVE: infinite loop saving as doc
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.3.3 release
Hardware: Other All
: medium normal
Assignee: Luke Deller
URL:
Whiteboard: target:4.1.0.0.beta2 target:4.2.0 tar...
Keywords:
: 63667 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-05-22 15:22 UTC by Luke Deller
Modified: 2013-05-28 21:25 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
nestedtables.odt (8.86 KB, application/vnd.oasis.opendocument.text)
2013-05-22 15:24 UTC, Luke Deller
Details
nestedtables.doc (10.00 KB, application/msword)
2013-05-22 15:24 UTC, Luke Deller
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke Deller 2013-05-22 15:22:50 UTC
Steps to reproduce:
1) open the attached file "nestedtables.odt"
2) save as .doc
2) observe that LibreOffice is unresponsive, consuming 100% CPU on one core

Further observations:
Recreating this document from scratch in Writer, it can actually be saved successfully as .doc (see attached "nestedtables.doc").  It is not until the document is saved as .odt, closed, reopened from .odt that the issue occurs.
Comment 1 Luke Deller 2013-05-22 15:24:01 UTC
Created attachment 79664 [details]
nestedtables.odt
Comment 2 Luke Deller 2013-05-22 15:24:35 UTC
Created attachment 79665 [details]
nestedtables.doc
Comment 3 Jorendc 2013-05-22 16:47:43 UTC
I can confirm this behavior using Linux Mint 15 x64 with LibreOffice 4.0.3.3. I saw you already send a patch to gerrit. I mark it as NEW for now, feel free to mark it as RESOLVED FIXED when its applied.

Thanks for the report and the fix!

Kind regards,
Joren
Comment 4 Commit Notification 2013-05-27 06:07:16 UTC
Luke Deller committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1834009c19946ab47de343deb97cbc50475fb96a&h=libreoffice-4-1

fix fdo#64872 infinite loop saving as doc


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2013-05-27 12:51:17 UTC
Luke Deller committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e94c8521041259d36aaadcadb9e42ca729a3812b

fix fdo#64872 infinite loop saving as doc



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2013-05-27 13:51:32 UTC
Luke Deller committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b571605129426a1bf8eb7c9e9927785f8a9a5305&h=libreoffice-4-0

fix fdo#64872 infinite loop saving as doc


It will be available in LibreOffice 4.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Michael Stahl 2013-05-28 21:25:49 UTC
*** Bug 63667 has been marked as a duplicate of this bug. ***